# ghost-text

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs
ui/: appwindow.slint
